--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,20 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background: #090707;
-  font-family: 'Press Start 2P', sans-serif;
+  background: #30A9DE;
+  font-family: Impact, Haettenschweiler, 'Arial Bold', sans-serif;
+  text-underline-offset: auto ;
   width: 700px;
   margin-left: auto;
   margin-right: auto;
 }
 
 header {
-  color: white;
+  color: whitesmoke;
 }
 
 .moves {
-  text-align: right;
+  text-align: center;
   text-transform: uppercase;
 }
 
@@ -32,8 +33,8 @@ h1 {
   display: flex;
   width: 700px;
   height: 50vh;
-  border: 17px solid #30A9DE;
-  margin-top: 5px;
+  border: 17px solid whitesmoke;
+  margin-top: 10px;
 }
 
 footer {
@@ -44,15 +45,17 @@ footer {
 
 footer > a {
   padding: 10px 20px 10px 20px;
-  color: #090707;
+
   text-decoration: none;
-  background: white;
-  transition: all 100ms ease;
+  background: green;
+  transition: all 150ms ease;
   display: inline-block;
+  text-emphasis-color: black;
 }
 
 footer > a:hover {
   background: #E53A40;
+  color: whitesmoke;
 }
 
 
@@ -75,7 +78,7 @@ footer > a:hover {
 }
 
 .col+.col {
-  border-left: 10px dashed #EFDC05;
+  border-left: 20px dashed #EFDC05;
 }
 
 .ring {
